--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Setup SQLLite
+      run: |
+        touch db.sqlite
+        cp .env.development .env
     - name: Build
       run: cargo build --verbose
     - name: Run tests
