--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install latest stable Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        override: true
+    - name: Set up cargo cache
+      uses: actions/cache@v3
+      continue-on-error: false
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/            
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: ${{ runner.os }}-cargo-
     - name: Install SQLx
       run: cargo install sqlx-cli --no-default-features --features native-tls,sqlite
     - name: Setup SQLite
