--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path="src/main.rs"
 
 [dependencies]
 async-trait = "0.1.73"
+crossterm = "0.27.0"
 cuid2 = "0.1.2"
 sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
 tokio = { version = "1", features = ["full"] }
